@@ -1,3 +1,8 @@
+Tue Jul 20 15:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSCalendarDate.m: ([initWithString:calendarFormat:locale:])
+	updated to get default format and locale info.
+
 Tue Jul 20 10:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSString.m: Update code for standardising paths - now
